# big-ron

./: .dockerignore  .editorconfig  .env.example  .eslintrc.json  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
prisma/: schema.prisma
scripts/: build.sh  start.sh
src/: bot.rs  config.rs  config.ts  database.rs  database.ts  main.rs  main.ts  types.rs  wordpress.rs
src/bot/: articles.rs  commands.rs  config.ts  embeds.rs  embeds.ts  events.rs  events.ts  index.ts  posts.ts  register.rs  register.ts
src/database/: cache.rs
src/types/: wordpress.d.ts
src/types/wordpress/: Article.d.ts  User.d.ts
src/wordpress/: article.ts  index.ts  init_update.ts  update.ts  util.ts
