[package]
name = "big-ron"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.61"
futures = "0.3.21"
htmlentity = "1.2.0"
once_cell = "1.13.0"
redis = "0.21.5"
serde = "1.0.143"
serde_json = "1.0.83"
substring = "1.4.5"


[dependencies.reqwest]
version = "0.11.11"
features = ["json"]

[dependencies.serenity]
version = "0.11.5"
features = [
  "base64",
  "builder",
  "bytes",
  "cache",
  "chrono",
  "client",
  "command_attr",
  "dashmap",
  "default_no_backend",
  "flate2",
  "framework",
  "gateway",
  "http",
  "levenshtein",
  "model",
  "parking_lot",
  "rustls_backend",
  "static_assertions",
  "tokio",
  "typemap_rev",
  "utils",
  "uwl"
]

[dependencies.tokio]
version = "1.20.1"
features = [
  "rt",
  "rt-multi-thread",
  "macros"
]
